# 2024-starterlab-llm-chatbot

./: .gitignore  .history  README.md  compose.yaml  pyproject.toml
chat/: 01-chat-ollama.py  02-few-shot-ollama.py  03-context-ollama.py  04-chat-langchain.py  05-loadnsplit-langchain.py  06-embeddings.py  07-rag-langchain.py  08-load-doc-in-db.py  09-rag-existing-db-langchain.py  21-datasets-huggingface.py  31-context-langchain.py  91-fine-tuning-hf.py
chat/utils/: args.py  prompt.py  similarity.py  splitter.py
data/: champ_euro_football_2024.html  champ_euro_football_2024.txt  champ_euro_football_2024.wiki  champ_euro_football_2024_from_html.txt  champ_euro_football_2024_light.txt
docker/pgvectors/: init-pgvector.sql
